--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "jsonp": "^0.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
