--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "better-scroll": "^0.4.0",
+    "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
