--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
+    "vue-lazyload": "^1.0.6",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
