--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "demo",
+  "name": "Amazing Music",
   "version": "1.0.0",
-  "description": "A music APP",
+  "description": "A Music APP",
   "author": "RickFang666 <rickfang0123@gmail.com>",
   "private": true,
   "scripts": {
