--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Amazing Music",
+  "name": "Amazing-Music",
   "version": "1.0.0",
   "description": "A Music APP",
   "author": "RickFang666 <rickfang0123@gmail.com>",
